XML vervollständigt; beginnendes L&F; Backup vor interface XGComponent;